Integrate with base.html.twig

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title parent() ~ " - Default - Index" %}
+{% block title "Default - Index - " ~ parent() %}
 
 {% block body %}
 <style>
