--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -1,3 +1,7 @@
-<html>
-    <body>Hello {{ name }} !!!</body>
-</html>
+{% extends 'base.html.twig' %}
+
+{% block title "Hello Page -" ~ parent() %}
+
+{% block body %}
+   Hello {{ name }} !!!
+{% endblock %}
