Finish contact test

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,9 +4,9 @@
 
 {% block body %}
     {{ form_start(contactForm) }}
-    {{ form_row(contactForm.email) }}
-    {{ form_row(contactForm.message) }}
-    <input type="submit" />
+        {{ form_row(contactForm.email) }}
+        {{ form_row(contactForm.message) }}
+        <input type="submit" value="Contacter"/>
     {{ form_end(contactForm) }}
 
 {% endblock %}
