--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -3,5 +3,12 @@
 {% block title "Hello Page -" ~ parent() %}
 
 {% block body %}
+
+   {% for message in app.flashes('success') %}
+      <div class="alert alert-success">
+         {{ message }}
+      </div>
+   {% endfor %}
+
    Hello {{ name }} !!!
 {% endblock %}
